CCDI-DCC : diagnosis-category unharmonized updates in sample nodes response
